# Truffle

./: .gitignore  CMakeLists.txt  main.cpp
src/Core/Application/: Application.cpp  Application.h
src/Core/GUI/: GLFWTestWindow.h
src/Core/Logger/: Logger.cpp  Logger.h
src/Core/Time/: Time.cpp  Time.h
src/Editor/: AppInfo.cpp  AppInfo.h  Console.cpp  Console.h  Editor.cpp  Editor.h  EditorPanel.h
src/Event/: Event.h  WindowResizeEvent.h
src/OpenGL/: OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLWindow.cpp  OpenGLWindow.h  Window.cpp  Window.h
src/Renderer/: IndexBuffer.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h
src/Scene/: HelloTriangle.cpp  HelloTriangle.h  Scene.h
src/Utils/: Key.h  Singleton.h
src/Window/: Window.h
